feat: add basic page layout, header and contact info

--- a/index.html
+++ b/index.html
@@ -3,6 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <title>Junior Developer CV</title>
+    <link rel="icon" href="favicon.jpg" type="image/x-icon" />
+    <style>
+      * { margin: auto; }
+
+      body {
+        width: max-content;
+        height: max-content;
+        text-align: center;
+        background-color: #f4e6e0;
+      }
+
+      .pageBackground {
+        background-image: url(qubeLines.png);
+        background-size: contain;
+        background-color: #f4e6e0;
+      }
+
+      .devName {
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+        font-size: 60px;
+        color: azure;
+      }
+
+      .devPhoto { width: 250px; }
+
+      .emailLogo, .telegramLogo, .githubLogo { width: 25px; }
+
+      .phoneLogo { width: 20px; }
+
+      .headerDecor {
+        display: block;
+        width: 900px;
+        height: 170px;
+        margin-top: -150px;
+        background-color: #3e3e3e;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+      }
+    </style>
   </head>
-  <body></body>
+
+<body>
+    <div class="pageBackground">
+      <header>
+        <img class="devPhoto" src="photoCv.png" alt="Developer Photo" />
+        <p class="devName">EKATERINA SMIRNOVA</p>
+        <p class="textSpacing">
+          <img class="emailLogo" src="emailLogo.png" alt="Email Icon" />
+          katerina.smirnova98@yandex.ru
+          <img class="phoneLogo" src="phoneLogo.png" alt="Phone Icon" />
+          +7(964)16507-51
+          <img
+            class="telegramLogo"
+            src="telegramLogo.png"
+            alt="Telegram Icon"
+          />
+          yomche
+          <img class="githubLogo" src="githubLogo.png" alt="GitHub Icon" />
+          yomche
+        </p>
+        <div class="headerDecor"></div>
+      </header>
+    </div>
+  </body>
 </html>
