feat: add footer

--- a/index.html
+++ b/index.html
@@ -57,23 +57,20 @@
     }
 
     .textSpacing {
-      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       color: #f4e6e0;
       font-size: 20px;
       word-spacing: 10px;
     }
 
     .contentText {
-      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       font-size: 20px;
       color: #3e3e3e;
     }
 
     .contentTextLeft {
-      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       font-size: 20px;
       color: #3e3e3e;
       text-align: left;
@@ -108,6 +105,16 @@
       width: 860px;
       height: 170px;
       margin-top: 20px;
+    }
+
+    footer { background-color: #3e3e3e; }
+
+    .footerText {
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
+      color: #f4e6e0;
+      font-size: 20px;
+      text-align: center;
     }
   </style>
 </head>
@@ -238,6 +245,9 @@
         </p>
       </section>
     </main>
+    <footer>
+      <p class="footerText">ALL RIGHTS RESERVED. EKATERINA SMIRNOVA. 2020</p>
+    </footer>
   </div>
 </body>
 
