refactor: change <section> content for better readability

--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
           <strong>OTHER SOFTWARE</strong> : Adobe Photoshop CS6, Autodesk 3ds
           Max
         </p>
-        <br /><br /><br /><br /><br />
       </section>
       <section class="inlineBlocks">
         <p class="sectionText">EXPERIENCE</p>
@@ -176,9 +175,7 @@
             WORKED IN A TEAM ON CREATING A
             <a href="https://github.com/yomche/Epam-HomeMadePizza-Task/tree/team-1_test_header_menu_about">WEBSITE FOR A
               PIZZERIA “HOMEMADEPIZZA”</a>
-            DURING A SUMMER UNIVERSITY PRACTICE IN EPAM SYSTEMS, RECEIVING THE
-            KNOWLEDGE OF THE PROCESS OF CREATING AN APPLICATION. CREATED SITE
-            COMPONENTS WITH HTML & CSS
+            DURING UNIVERSITY PRACTICE IN EPAM SYSTEMS
           </li>
         </ul>
       </section>
